<resources>
    <string name="app_name" translatable="false">Hue App</string>
    <string name="all_lights">All lights</string>
    <string name="living_room">Living room</string>
    <string name="bedroom">Bedroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="pair">Pair</string>
    <string name="state">State</string>
    <string name="pair_simulator">Pair simulator</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="category">Category</string>
    <string name="lightname">Light name</string>
    <string name="unassigned">Unassigned</string>
    <string name="selected">Selected</string>
    <string name="successpair">Successfully paired</string>
    <string name="errorpair">Error pairing</string>
    <string name="hue">Hue</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="firstTime">Apparently this is your first time opening the application, please enter your name below.</string>
    <string name="continueInsert">Continue</string>
    <string name="username">Username</string>
    <string name="editSettings">here you can customize the settings of the application.</string>
    <string name="ChangePicture">Change setting picture</string>
</resources>
