<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".layout.activity.MainActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/main_tab_layout"
        style="@style/FragmentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/colorPrimary"
        app:tabGravity="center"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/colorSelectedTab"
        app:tabTextAppearance="@style/FragmentText"
        app:tabTextColor="@color/colorText">


        <android.support.design.widget.TabItem
            android:id="@+id/main_allLights_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_lights" />

        <android.support.design.widget.TabItem
            android:id="@+id/main_living_room_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/living_room" />

        <android.support.design.widget.TabItem
            android:id="@+id/main_bedroom_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bedroom" />

        <android.support.design.widget.TabItem
            android:id="@+id/main_kitchen_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen" />
    </android.support.design.widget.TabLayout>

    <Button
        android:id="@+id/main_par_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/fira_sans_bold"
        android:padding="0dp"
        android:text="@string/pair"
        android:textColor="@color/colorSelectedTab"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_par_button_simulator"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/fira_sans_bold"
        android:padding="0dp"
        android:text="@string/pair_simulator"
        android:textColor="@color/colorSelectedTab"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/main_par_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/main_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_par_button_simulator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tab_layout">

    </android.support.v4.view.ViewPager>

</android.support.constraint.ConstraintLayout>